# hello

./: pyproject.toml  setup.cfg
hello/scripts/: say_hello.py
